--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.12",
     "@thirdweb-dev/react": "^3.4.4",
     "@thirdweb-dev/sdk": "^3.4.4",
     "ethers": "^5.7.2",
